--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
+body{
+    color: rgb(110, 110, 110);
+}
 .container{
     height: auto;
     display: grid;
-    text-align: center;
+    
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(4, auto);
-    grid-gap: 4px;
+    grid-template-rows: repeat(5, auto);
+    /* grid-gap: 4px; */
     grid-template-areas: 
     "h h h h h h h h h h h h"
     "s s s s s s s s s s s s"
+    "b b b b b b b b b b b b"
     "a2 a2 a2 c c c c c c a1 a1 a1"
     "f f f f f f f f f f f f";
 
@@ -15,11 +19,13 @@
 .header > .navbar{
     background-color: rgb(167, 167, 167);
     color: white;
-    font-size: 20px;
+    font-size: 18px;
 }
 /* slide section */
-
-.container >section{
+#carouselIndicators img,#first{
+    height: 500px; 
+}
+.container >.slide > section{
    
     color: white;
     
@@ -32,14 +38,21 @@
     background-color: cadetblue;
     grid-area: s;
 }
+.brand-connection{
+    background-color: rgb(245, 245, 245);
+    grid-area: b;
+    
+}
+
 .aside1{
     background-color: rgb(100, 134, 65);
     grid-area: a1;
 
 }
 .content{
-    background-color: crimson;
+    background-color: rgb(250, 230, 234);
     grid-area: c;
+    color: rgb(136, 37, 37);
 }
 .aside2{
     background-color: rgb(99, 5, 5);
@@ -48,4 +61,37 @@
 .footer{
     background-color: darkslateblue;
     grid-area: f;
+}
+/* brand connection */
+.brand-connection h2{
+    color: black;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.col-md-3 > img{
+    padding: 5px;
+    box-shadow: 0 5px 8px rgb(0 0 0 / 16%);
+    border-radius: 5px;
+}
+
+/* brand-connection */
+
+
+.brand-connection{
+    padding-bottom: 100px;
+}
+.features-item-content h3{
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 28px;
+}
+.features-item-content{
+    margin-left: 15px;
+    text-align: justify;
+}
+.features-item-content p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
 }
