--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,14 @@ body{
     display: grid;
     
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(6, auto);
     /* grid-gap: 4px; */
     grid-template-areas: 
     "h h h h h h h h h h h h"
     "s s s s s s s s s s s s"
     "b b b b b b b b b b b b"
-    "a1 a1 a1 a1 c c c c c a2 a2 a2"
+    "a1 a1 a1 a1 c c c c c c c c"
+    "a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2"
     "f f f f f f f f f f f f";
 
 }
@@ -50,7 +51,7 @@ body{
 
 }
 .content{
-    background-color: rgb(250, 230, 234);
+    background-color: rgb(217, 219, 214);
     grid-area: c;
     color: rgb(136, 37, 37);
 }
@@ -155,5 +156,38 @@ body{
     border-radius: 5px;
 }
 .destinations-image > img{
+    padding: 5px;
+}
+/* content section */
+.content-nav > .nav li{
+    list-style: none;
+    
+}
+.content-nav > .nav li>a{
+    color: black;
+}
+.content-nav > ul{
+    border-bottom: 1px solid gray;
+}
+.content-nav > .nav li a:hover{
+    background-color: black;
+    color: white;
+    font-size: 18px;
+}
+
+#orderButton{
+    padding: 2px 20px;
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    border: 2px solid black;
+    border-radius: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.content-nav .collapse .card{
+    /* border: 1px solid black; */
     padding: 5px;
 }
