--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body{
     color: rgb(136, 37, 37);
 }
 .aside2{
-    background-color: rgb(99, 5, 5);
+    background-color: rgb(217, 219, 214);
     grid-area: a2;
 }
 .footer{
@@ -149,7 +149,7 @@ body{
     background-color: cadetblue;
     color: white;
 }
-.worldwide-flight-destination a{
+.worldwide-flight-destination a, .airports-destinations span{
     background-color: rgb(211, 208, 208);
     color: black;
     padding: 3px 6px;
@@ -189,5 +189,30 @@ body{
 
 .content-nav .collapse .card{
     /* border: 1px solid black; */
+    padding: 5px;
+}
+
+/* asked the questions */
+.questionsArea{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.questions-content{
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    border-radius: 10px;
+}
+.questions-content h4{
+    font-weight: 600;
+    font-size: 22px;
+}
+/* .questions-content > .list-group li::after{
+    content: '\002B';
+    float: right;
+    font-size: 20px;
+} */
+.airports-destinations span{
+    display: inline-flex;
+    margin: 2px 6px;
     padding: 5px;
 }
