--- a/css/style.css
+++ b/css/style.css
@@ -354,3 +354,19 @@ hr.hrr{
 .contact-form .connected-icons{
     justify-content: center;
 }
+
+@media only screen and (max-width: 600px) {
+    .container{
+        grid-template-columns: repeat(12, auto);
+        grid-template-rows: repeat(7, auto);
+        /* grid-gap: 4px; */
+        grid-template-areas: 
+        "h h h h h h h h h h h h"
+        "s s s s s s s s s s s s"
+        "b b b b b b b b b b b b"
+        "a1 a1 a1 a1 a1 a1 a1 a1 a1 a1 a1 a1"
+        "c c c c c c c c c c c c"
+        "a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2"
+        "f f f f f f f f f f f f";
+    }
+  }
