--- a/css/style.css
+++ b/css/style.css
@@ -355,11 +355,10 @@ hr.hrr{
     justify-content: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
     .container{
         grid-template-columns: repeat(12, auto);
         grid-template-rows: repeat(7, auto);
-        /* grid-gap: 4px; */
         grid-template-areas: 
         "h h h h h h h h h h h h"
         "s s s s s s s s s s s s"
@@ -368,5 +367,27 @@ hr.hrr{
         "c c c c c c c c c c c c"
         "a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2 a2"
         "f f f f f f f f f f f f";
+        justify-content: center;
     }
+    .more-features-items form{
+        
+        flex: none;
+    }
+    .more-features-items form input[type=tex]{
+        width: 100% !important;
+        
+    }
+    .connected-icons {
+        justify-content: center;
+    }
+    .connectedOfficeContent{
+        text-align: center;
+    }
+    .connected-icons a{
+        text-align: center;
+    }
+    .footer{
+        margin: 10px;
+    }
+    
   }
